# hass-music-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  hacs.json  pylintrc  pyproject.toml  requirements_dev.txt  requirements_test.txt  ruff.toml  setup.cfg  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  translation_contribute.yml  translations.yml
.github/workflows/: hassfest.yml  lint_frontend.yml  pre-commit-updater.yml  publish_release.yml  test.yml  validate.yml
custom_components/mass/: __init__.py  config_flow.py  const.py  entity.py  helpers.py  intent.py  manifest.json  media_browser.py  media_player.py  media_source.py  number.py  panel.py  player_controls.py  services.py  services.yaml  strings.json  switch.py  websockets.py
custom_components/mass/translations/: en.json  es.json  hu.json  nl.json  pl.json  pt-BR.json
custom_components/mass/translations/frontend/: de.json  en.json  es.json  fr.json  nl.json  pl.json
custom_components/music_assistant/: __init__.py  config_flow.py  const.py  entity.py  manifest.json  media_player.py  media_source.py  number.py  player_controls.py  switch.py
custom_components/music_assistant/translations/: en.json
custom_sentences/en/: play_media_on_media_player.yaml
prompt/: prompt.txt
tests/: common.py  conftest.py  test_config_flow.py
